--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+.header {
+  margin: 30px 0;
+}
 .App-logo {
   display: block;
   margin: 0 auto;
-  max-width: 200px;
+  max-width: 150px;
+}
+
+.App-footer {
+  text-align: center;
+  margin: 30px 0;
 }
